update send button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,8 @@
 </form>
 <button (click)="leave()">Leave Room</button>
 
+<h1>{{noti}}</h1>
+
 <ul >
 <li *ngFor="let data of message"><strong>{{data.user}}:</strong> {{data.message}} </li>
 </ul>
